syntax = "proto3";
import "google/protobuf/wrappers.proto";
package UserSample;

service UserSampleQuery {
    rpc GetSample(GetSampleRequest) returns (CommonResult);
    rpc GetAllSamples(GetAllSamplesRequest) returns (CommonResult);
}

message GetSampleRequest{
    optional google.protobuf.Int32Value Id = 1;
}
message GetAllSamplesRequest {
	optional SkipTakeOption SkipTakeOption = 1;
	optional PagingOption PagingOption = 2;
}

message SkipTakeOption {
	google.protobuf.Int32Value Skip = 1;
	google.protobuf.Int32Value Take = 2;
}

message PagingOption {
	google.protobuf.Int32Value PageNumber = 1;
	google.protobuf.Int32Value PageSize = 2;
}

message CommonResult {
    int32 statusCode = 1;
    bool isSuccess = 2;
    optional string data = 3;
    optional string dataType = 4;
    optional string messageCode = 5;
    optional Error error = 6;
}
message Error{
    repeated string details = 1;
    string stackTrace = 2;
}

